// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Tracking Domains Status Tag should render for blocked status 1`] = `
<WithPositioning(Tooltip)
  content="This domain is not available for use. For more information, please contact support."
  dark={true}
>
  <Tag>
    Blocked
  </Tag>
</WithPositioning(Tooltip)>
`;

exports[`Component: Tracking Domains Status Tag should render for pending status 1`] = `
<WithPositioning(Tooltip)
  content="This domain is pending review, please check back again soon."
  dark={true}
>
  <Tag>
    Pending
  </Tag>
</WithPositioning(Tooltip)>
`;

exports[`Component: Tracking Domains Status Tag should render for unverified status 1`] = `
<Tag
  yellow={true}
>
  Unverified
</Tag>
`;

exports[`Component: Tracking Domains Status Tag should render null for any other status 1`] = `""`;

exports[`Component: Tracking Domains Status Tag should render null for any other status 2`] = `""`;

exports[`Component: Tracking Domains Status Tag should render null for any other status 3`] = `""`;

exports[`Component: Tracking Domains Status Tag should render null for any other status 4`] = `""`;

exports[`Component: Tracking Domains Status Tag should render null for any other status 5`] = `""`;
